# Portfolio-Tracker

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  DATABASE.md  PROJECT.md
docs/references/: ARCHITECTURE_REVIEW.md  DATABASE_IMPORT_ANALYTICS_BENCHMARK_NOTES.md  FINANCIAL_SYSTEMS_BLUEPRINT.md  README.md  UI_UX.md  UX_ARCHITECTURE_V1.md  UX_ARCHITECTURE_V2_PERSONAL.md
src/portfolio_manager/application/: bootstrap.py
src/portfolio_manager/infrastructure/logging/: logger.py
src/portfolio_manager/presentation/windows/: main_window.py
src/portfolio_tracker/: __init__.py
src/portfolio_tracker/infrastructure/config/: settings.py
